--- a/source/_template/_layout.jade
+++ b/source/_template/_layout.jade
@@ -48,7 +48,7 @@ html(lang='ja')
     link(rel='stylesheet', href='./stylesheets/style.css')
 
   body
-    .wrap
+    .wrapper
       include /_template/_header
 
       main
@@ -56,4 +56,5 @@ html(lang='ja')
 
       include /_template/_footer
 
+    script(src='./javascripts/lib.js')
     script(src='./javascripts/main.js')
