--- a/source/stylesheets/_partial/base.sass
+++ b/source/stylesheets/_partial/base.sass
@@ -1,3 +1,7 @@
+@font-face
+  font-family: 'mouhitsu'
+  src: url('/fonts/ZiFAei.otf')
+
 html
   width: 100%
   height: 100%
@@ -24,7 +28,8 @@ html
           position: absolute;
           top: 50%;
           width: 100%;
-          margin-top: -1em;
+          margin-top: -0.5em;
           text-align: center;
-          font-size: 60pt
+          font-family: 'mouhitsu'
+          font-size: 120pt
           color: #fff
