Spriteを使ったRamenを追加し、切り替えられるように修正

--- a/source/stylesheets/_partial/base.sass
+++ b/source/stylesheets/_partial/base.sass
@@ -15,21 +15,28 @@ html
       main
         width: 100%
         height: 100%
-      .ramen__wrapper
-        width: 100%
-        height: 100%
-      .ramenNum__wrapper
-        position: absolute
-        width: 100%
-        height: 100%
-        top: 0
-        left: 0
-        .ramenNum
-          position: absolute;
-          top: 50%;
-          width: 100%;
-          margin-top: -0.5em;
-          text-align: center;
-          font-family: 'mouhitsu'
-          font-size: 120pt
-          color: #fff
+        .ramen__wrapper
+          width: 100%
+          height: 100%
+        .ramenNum__wrapper
+          position: absolute
+          width: 100%
+          height: 100%
+          top: 0
+          left: 0
+          .ramenNum
+            position: absolute;
+            top: 50%;
+            width: 100%;
+            margin-top: -0.5em;
+            text-align: center;
+            font-family: 'mouhitsu'
+            font-size: 120pt
+            color: #fff
+        .ramenTypeButton
+          position: absolute
+          bottom: 60px
+          left: 20px
+          border: none
+          padding: 20px
+          background: rgba(255, 112, 62, 0.93)
