--- a/source/threejs-tester.jade
+++ b/source/threejs-tester.jade
@@ -2,7 +2,7 @@ extends /_template/_layout
 
 block vars
   - var head = {}
-  - head.title       = 'Three.js Tester : Ramen Museum'
+  - head.title       = 'Three.js Tester : RamenSprite Museum'
   - head.keywords    = ''
   - head.description = ''
 
@@ -12,3 +12,4 @@ block content
     input.slider(type="range", max="200")
   div.ramenNum__wrapper
     span.ramenNum
+  button.ramenTypeButton Mesh / Sprite
